--- a/aula128/contatos/templates/contatos/index.html
+++ b/aula128/contatos/templates/contatos/index.html
@@ -6,6 +6,7 @@
 <table class="table">
     <thead>
     <tr>
+        <th>ID</th>
         <th>Nome</th>
         <th>Sobrenome</th>
         <th>Telefone</th>
@@ -14,15 +15,32 @@
     </thead>
     <tbody>
     {% for contato in contatos %}
-        <tr>
-            <td>
-                <a href="#">{{ contato.nome }}</a>
-            </td>
-            <td>{{ contato.sobrenome }}</td>
-            <td>{{ contato.telefone }}</td>
-            <td>{{ contato.categoria }}</td>
-        </tr>
+    <tr>
+        <td>{{ contato.id }}</td>
+        <td>
+            <a href="{% url 'detalhes' contato_id=contato.id %}">{{ contato.nome }}</a>
+        </td>
+        <td>{{ contato.sobrenome }}</td>
+        <td>{{ contato.telefone }}</td>
+        <td>{{ contato.categoria }}</td>
+    </tr>
     {% endfor %}
     </tbody>
 </table>
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination">
+        {% for pagina in contatos.paginator.page_range %}
+        {% if contatos.number == pagina %}
+        <li class="page-item active"><a
+                class="page-link" href="?p={{ pagina }}">{{pagina}}</a>
+        </li>
+        {% else %}
+        <li class="page-item"><a
+                class="page-link" href="?p={{ pagina }}">{{pagina}}</a>
+        </li>
+        {% endif %}
+        {% endfor %}
+    </ul>
+</nav>
 {%endblock%}
