--- a/aula128/templates/base.html
+++ b/aula128/templates/base.html
@@ -26,6 +26,8 @@
                      id="search-input"
                      placeholder="Digite sua pesquisa"
                      name="termo">
+
+              {% include 'parciais/_messages.html' %}
             </div>
           </div>
         </form>
