--- a/aula128/templates/base.html
+++ b/aula128/templates/base.html
@@ -17,6 +17,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
+
+        {% if 'accounts' not in request.path %}
         <br><br>
         <form method="get" action="{% url 'busca' %}">
           <div class="form-group row">
@@ -31,6 +33,8 @@
             </div>
           </div>
         </form>
+        {% endif %}
+
 
         {%block 'conteudo'%}{%endblock%}
       </div>
