Login, Logout e Dashboard

--- a/aula128/templates/base.html
+++ b/aula128/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="pt">
 
 <head>
-  <title>Agenda</title>
+  <title>{% block 'titulo' %}Agenda{% endblock %}</title>
 
   {% include 'parciais/_head.html' %}
 
