--- a/aula128/accounts/templates/accounts/login.html
+++ b/aula128/accounts/templates/accounts/login.html
@@ -1,7 +1,30 @@
 {% extends 'base.html' %}
 
-{% block 'conteudo' %}
-login
+{% block 'titulo' %}Login{% endblock %}
 
-{% include 'parciais/_messages.html' %}
+
+{% block 'conteudo' %}
+<h1 class="mt-3 mb-3">Login</h1>
+
+{% if not user.is_authenticated %}
+<form method="POST" action="{% url 'login' %}">
+    {% include 'parciais/_messages.html' %}
+    {% csrf_token %}
+    <div class="form-group">
+        <label>Usuário</label>
+        <input type="text" name="usuario" value="{{ request.POST.usuario }}" class="form-control"
+               placeholder="Enter user">
+    </div>
+    <div class="form-group">
+        <label>Senha</label>
+        <input type="password" name="senha" class="form-control" placeholder="enter password">
+    </div>
+    <button type="submit" class="btn btn-primary">logar-me</button>
+</form>
+{% else %}
+<p>
+    você fez login com {{user}},
+    <a href="{% url 'logout' %}">clique aqui</a> para sair.
+</p>
+{% endif %}
 {% endblock %}
